--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebase": "^8.10.0",
     "nft.storage": "^3.4.0",
     "react": "^17.0.2",
+    "html2canvas": "^1.3.3",
+    "react-router-dom": "^6.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
